--- a/doc/fr/dita/api_select.dita
+++ b/doc/fr/dita/api_select.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd" >
-<reference id="lwn51m2t26an" xml:lang="en-FR">
+<reference xml:lang="fr-FR">
 	<title>API Search / Select</title>
 	<prolog>
 		<author>Emmanuel Keller</author>
