--- a/doc/en/dita/doc_index.ditamap
+++ b/doc/en/dita/doc_index.ditamap
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd" >
-<map xml:lang="en-US">
-	<title>Documentation index</title>
-	<topicref href="install_oss.dita" />
+<map title="Document index" xml:lang="en-US">
+	<topicref href="api_select.dita" type="reference" />
+	<topicref href="install_oss.dita" type="task" />
 </map>
