--- a/doc/en/dita/doc_index.ditamap
+++ b/doc/en/dita/doc_index.ditamap
@@ -1,7 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd" >
-<map title="Document index" xml:lang="en-US">
-	<topicref href="api_select.dita" type="reference" />
-	<topicref href="quick_start.dita" type="task" />
-	<topicref href="war_install_oss.dita" type="task" />
-</map>
+<!DOCTYPE bookmap PUBLIC "-//OASIS//DTD DITA BookMap//EN" "bookmap.dtd" >
+<bookmap xml:lang="en-US">
+	<title>
+		<ph>Open Search Server documentation</ph>
+		<image href="images/logo_oss.png" placement="break" />
+	</title>
+	<bookmeta>
+		<author></author>
+		<authorinformation>
+			<personinfo>
+				<namedetails>
+					<personname>
+						<firstname>Emmanuel</firstname>
+						<lastname>Keller</lastname>
+					</personname>
+					<personname>
+						<firstname>Emmanuel</firstname>
+						<lastname>Gosse</lastname>
+					</personname>
+				</namedetails>
+			</personinfo>
+			<organizationinfo>
+				<namedetails>
+					<organizationnamedetails>
+						<organizationname>InfoPro Digital</organizationname>
+					</organizationnamedetails>
+				</namedetails>
+				<addressdetails>
+					<thoroughfare>
+						16, rue Mederic</thoroughfare>
+					<locality>Paris</locality>
+					<country>France</country>
+				</addressdetails>
+				<urls>
+					<url>http://www.open-search-server.com
+					</url>
+				</urls>
+			</organizationinfo>
+		</authorinformation>
+		<prodinfo>
+			<prodname>Open Search Server</prodname>
+			<vrmlist>
+				<vrm version="1.0" release="Beta 1" />
+			</vrmlist>
+		</prodinfo>
+		<bookrights>
+			<bookowner>
+				<organization>&#x00A9; InfoPro Digital 2009</organization>
+			</bookowner>
+		</bookrights>
+	</bookmeta>
+	<chapter>
+		<topicref href="quick_start.dita" type="task" />
+		<topicref href="api_select.dita" type="reference" />
+		<topicref href="war_install_oss.dita" type="task" />
+	</chapter>
+</bookmap>
