--- a/doc/fr/dita/documentation.ditamap
+++ b/doc/fr/dita/documentation.ditamap
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE bookmap PUBLIC "-//OASIS//DTD DITA BookMap//EN" "bookmap.dtd" >
-<bookmap xml:lang="en-US">
+<!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd" >
+<map title="Documentation" xml:lang="en-EN">
 	<title>
-		<ph>Open Search Server documentation</ph>
-		<image href="images/logo_oss.png" placement="break" />
+		<ph>Documentation Open Search Server</ph>
 	</title>
 	<bookmeta>
 		<author></author>
@@ -33,7 +32,7 @@
 					<country>France</country>
 				</addressdetails>
 				<urls>
-					<url>http://www.open-search-server.com
+					<url>http://www.open-search-server.fr
 					</url>
 				</urls>
 			</organizationinfo>
@@ -50,9 +49,5 @@
 			</bookowner>
 		</bookrights>
 	</bookmeta>
-	<chapter>
-		<topicref href="quick_start.dita" type="task" />
-		<topicref href="api_select.dita" type="reference" />
-		<topicref href="war_install_oss.dita" type="task" />
-	</chapter>
-</bookmap>
+	<topicref href="api_select.dita" type="reference" />
+</map>
