--- a/doc/en/dita/quick_start/start_crawl.dita
+++ b/doc/en/dita/quick_start/start_crawl.dita
@@ -5,7 +5,7 @@
   <title>Start the crawl process.</title>
 
   <shortdesc>The crawl process will download and index the url(s) you insert
-  in the pattern list.<image href="images/quick_start/crawl-process.png"
+  in the pattern list.<image href="images/crawl-process.png"
   placement="break"/></shortdesc>
 
   <taskbody>
