--- a/doc/en/dita/quick_start/start_oss.dita
+++ b/doc/en/dita/quick_start/start_oss.dita
@@ -5,7 +5,7 @@
   <title>Start Open Search Server</title>
 
   <shortdesc>Start the server by executing the start batch file.<image
-  href="images/quick_start/start.png" placement="break"/></shortdesc>
+  href="images/start.png" placement="break"/></shortdesc>
 
   <taskbody>
     <steps>
